--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@applitools/eyes-playwright": "^1.14.0",
     "@playwright/test": "^1.45.0",
     "@types/node": "^20.14.9"
   }
